name:                liftwoes
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/mwotton/liftwoes#readme
license:             BSD3
license-file:        LICENSE
author:              Mark Wotton
maintainer:          mwotton@gmail.com
copyright:           AllRightsReserved
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                       Instances
  build-depends:       base >= 4.7 && < 5
                     , hashable
                     , th-lift-instances
                     , template-haskell
                     , time
                     , text
                     , unordered-containers
                      ,containers
  default-language:    Haskell2010


executable liftwoes-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , liftwoes
  default-language:    Haskell2010

test-suite liftwoes-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , liftwoes
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mwotton/liftwoes
